added essay and multi essay context

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "db:pull": "drizzle-kit introspect",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:check": "drizzle-kit check"
+    "db:check": "drizzle-kit check",
+    "db:ingest": "tsx lib/pg/ingest.ts"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.22",
